trying to do full view recipe
